[package]
name = "javascriptcore-rs-sys"
version = "0.1.2"
authors = ["The Gtk-rs Project Developers"]

description = "Sys functions for the Rust bindings of the javacriptcore library"
repository = "https://github.com/gtk-rs/javascriptcore-rs"
license = "MIT"
homepage = "http://gtk-rs.org"
keywords = ["javascript", "gtk-rs", "gnome"]

[lib]
name = "javascriptcore_sys"

[dependencies]
libc = "^0.2"
