[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "Sys functions for the Rust bindings of the javacriptcore library"
edition = "2021"
keywords = ["javascript", "gtk-rs", "gnome"]
license = "MIT"
name = "javascriptcore-rs-sys"
repository = "https://github.com/tauri-apps/javascriptcore-rs"
version = "0.4.0"

[package.metadata.system-deps.javascriptcoregtk_4_0]
name = "javascriptcoregtk-4.1"
version = "2.38"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "javascriptcore_rs_sys"

[dependencies]
glib-sys = "^0.16"
gobject-sys = "^0.16"
libc = "0.2"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v2_28 = []
